--- a/ToDo/Views/Shared/_Layout.cshtml
+++ b/ToDo/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                                 asp-action="Index">Authors</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ToDo" asp-action="Index">ToDos</a>
                         </li>
 
